feat(gpt-runner-core): add utils for client

--- a/packages/gpt-runner-core/client/index.html
+++ b/packages/gpt-runner-core/client/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'none'; font-src ${webview.cspSource}; style-src ${webview.cspSource} 'unsafe-inline' ; script-src 'nonce-${nonce}';">
   <title>GPT Runner</title>
+  <link href="/codicon/codicon.css" rel="stylesheet" />
 </head>
 
 <body>
