feat(gpt-runner-vscode): vscode is success load gpt-runner

--- a/packages/gpt-runner-web/client/index.html
+++ b/packages/gpt-runner-web/client/index.html
@@ -5,12 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <title>GPT Runner</title>
+  <script>
+    // before-script
+  </script>
+  <base href="/">
   <link href="/codicon/codicon.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script>
+    // after-script
+  </script>
 </body>
 
 </html>
