fix(gpt-runner-vscode): fix vscode theme incorrect

--- a/packages/gpt-runner-web/client/index.html
+++ b/packages/gpt-runner-web/client/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <title>GPT Runner</title>
+  <base href="/">
   <script src="/scripts/eventemitter.js"></script>
   <script>
     window.__emitter__ = new window.EventEmitter()
