feat(gpt-runner-web): add realtime gpt.md file parse

--- a/packages/gpt-runner-web/client/index.html
+++ b/packages/gpt-runner-web/client/index.html
@@ -20,6 +20,9 @@
         ...window.__GLOBAL_CONFIG__ || {},
       }
     }
+
+    // change locale language to navigator language
+    document.documentElement.lang = window.navigator.language
   </script>
   <script>
     // before-script
