--- a/packages/gpt-runner-web/client/index.html
+++ b/packages/gpt-runner-web/client/index.html
@@ -74,11 +74,13 @@
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-  <script>
-    // after-script
-  </script>
+  <main>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    <script>
+      // after-script
+    </script>
+  </main>
 </body>
 
 </html>
